
2016-01-20  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #190 - added check that ERASE EOL and EOS are not
	  specified at the same time.
	* parser.y: added [END OF] LINE/SCREEN as synonym for EOL/EOS.
	* parser.y: fixed bug #191 - added check that BLANK LINE and SCREEN are
	  not specified at the same time.

2016-01-17  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (screen_description): fixed bug #186 - only the clauses
	  in the current screen item are checked for duplication.
	* scanner.l (scan_*): suppressed compiler warnings by casting size_t to
	  int in printf calls.

2016-01-10  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #182 - ON/OFF in SWITCH clause causing incorrect
	  duplicate CURRENCY clause error.
	* parser.y (check_repeated): merged check_*_repeated functions into one
	  function.

2016-01-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l, tree.c: postponed numerical literal checks for possible labels
	  from scanner.l to tree.c (check_lit_length, error_numeric_literal)

2016-01-08  Edward Hart <edward.dan.hart@gmail.com>

	* pplex.l, config.def: reverted [r605]. Marked continuation of COBOL
	  words as archaic in standard-conforming implementations.

2016-01-04  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #180 - added check that HIGHLIGHT and LOWLIGHT are
	  not specified at the same time.
	* codegen.c (output_set_attribute): made HIGLIGHT ON imply LOWLIGHT off
	  and vice versa.

2016-01-03  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #178 - added check that certain identifiers are
	  not 88-level items.

2016-01-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l: moved SET_LOCALATION to tree.c (cb_build_xyz)
	* tree.c (cb_concat_literals): the new literal inherits its position from
	  the first literal, check for cb_literal_length
	ODO checks:
	* parser.y (integer): return numeric literal -1 instead of cb_int1