@@ -1,4 +1,8 @@
 
+2016-01-22  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y: refactored handling of conflicting screen clauses.
+
 2016-01-20  Edward Hart <edward.dan.hart@gmail.com>
 
 	* parser.y: fixed bug #190 - added check that ERASE EOL and EOS are not
